--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "Ventonix": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Ventonix"
+    }
+  },
+  "defaultProject": "Ventonix",
+  "cli": {
+    "analytics": "2b1bb14c-dba6-4628-b043-ba2c7ce1ca2f"
+  }
 }
