wip: add typing css

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
+    "t-writer.js": "^1.0.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
