--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
 /tmp
 /out-tsc
 # Only exists if Bazel was run
@@ -10,7 +9,8 @@
 # dependencies
 /node_modules
 /.angular
-/dist
+dist
+dist/
 
 # profiling files
 chrome-profiler-events*.json
